--- a/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
+++ b/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
@@ -122,6 +122,7 @@
     </Compile>
     <Compile Include="Forms\GridFont.cs" />
     <Compile Include="Forms\MenuFont.cs" />
+    <Compile Include="Forms\TabsFont.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XMLAttribute.cs" />
