--- a/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
+++ b/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
@@ -83,20 +83,6 @@
       <DependentUpon>DataKeyDetail.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\DataKey\DataKeyGridCode.cs" />
-    <Compile Include="Forms\DataMapColumn\DataMapColumnDetail.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\DataMapColumn\DataMapColumnDetail.Designer.cs">
-      <DependentUpon>DataMapColumnDetail.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\DataMapColumn\DataMapColumnGridCode.cs" />
-    <Compile Include="Forms\DataMapTable\DataMapTableDetail.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\DataMapTable\DataMapTableDetail.Designer.cs">
-      <DependentUpon>DataMapTableDetail.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\DataMapTable\DataMapTableGridCode.cs" />
     <Compile Include="Forms\DataModule\DataModuleDetail.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,12 +120,6 @@
     <EmbeddedResource Include="Forms\DataKey\DataKeyDetail.resx">
       <DependentUpon>DataKeyDetail.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\DataMapColumn\DataMapColumnDetail.resx">
-      <DependentUpon>DataMapColumnDetail.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\DataMapTable\DataMapTableDetail.resx">
-      <DependentUpon>DataMapTableDetail.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\DataModule\DataModuleDetail.resx">
       <DependentUpon>DataModuleDetail.cs</DependentUpon>
     </EmbeddedResource>
@@ -158,6 +138,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
