--- a/CoreAssemblies/LJCLibraries/LJCWinFormControls/LJCWinFormControls.csproj
+++ b/CoreAssemblies/LJCLibraries/LJCWinFormControls/LJCWinFormControls.csproj
@@ -53,6 +53,8 @@
     <Compile Include="ColorSetting.cs" />
     <Compile Include="ColorSettings.cs" />
     <Compile Include="ControlCommon.cs" />
+    <Compile Include="ControlFont.cs" />
+    <Compile Include="GridFont.cs" />
     <Compile Include="InfoWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,9 +100,11 @@
     <Compile Include="LJCTabControl.Designer.cs">
       <DependentUpon>LJCTabControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="MenuFont.cs" />
     <Compile Include="PanelControlsAdjust.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyntaxColors.cs" />
+    <Compile Include="TabsFont.cs" />
     <Compile Include="TextDisplay.cs">
       <SubType>Form</SubType>
     </Compile>
