--- a/CoreAssemblies/LJCLibraries/LJCWinFormCommon/LJCWinFormCommon.csproj
+++ b/CoreAssemblies/LJCLibraries/LJCWinFormCommon/LJCWinFormCommon.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ControlValue.cs" />
     <Compile Include="ControlValues.cs" />
     <Compile Include="FormCommon.cs" />
+    <Compile Include="FormPoint.cs" />
     <Compile Include="ModuleReference.cs" />
     <Compile Include="ModuleReferences.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
