--- a/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
+++ b/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Forms\DataUtilityListCode.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\ProcBuilder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XMLAttribute.cs" />
