Data Utility Updates

--- a/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
+++ b/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
@@ -170,16 +170,16 @@
     <Content Include="bin\Debug\ControlValues\DataUtility.xml" />
     <Content Include="bin\Debug\DataConfigs.xml" />
     <Content Include="bin\Debug\LJCDataUtility.xml" />
-    <Content Include="bin\Debug\SQLScript\Add\sp_DataColumnAdd.sql" />
-    <Content Include="bin\Debug\SQLScript\Add\sp_DataTableAdd.sql" />
+    <Content Include="bin\Debug\SQLScript\2Add\sp_DataColumnAdd.sql" />
+    <Content Include="bin\Debug\SQLScript\2Add\sp_DataTableAdd.sql" />
     <Content Include="bin\Debug\SQLScript\DataUtilityDB.sql" />
-    <Content Include="bin\Debug\SQLScript\Data\DataUtilityData.sql" />
-    <Content Include="bin\Debug\SQLScript\Add\sp_DataModuleAdd.sql" />
-    <Content Include="bin\Debug\SQLScript\Data\sp_DataColumnData.sql" />
-    <Content Include="bin\Debug\SQLScript\Add\sp_DataKeyAdd.sql" />
-    <Content Include="bin\Debug\SQLScript\Data\sp_DataKeyData.sql" />
-    <Content Include="bin\Debug\SQLScript\Data\sp_DataModuleData.sql" />
-    <Content Include="bin\Debug\SQLScript\Data\sp_DataTableData.sql" />
+    <Content Include="bin\Debug\SQLScript\3Data\DataUtilityData.sql" />
+    <Content Include="bin\Debug\SQLScript\2Add\sp_DataModuleAdd.sql" />
+    <Content Include="bin\Debug\SQLScript\3Data\sp_DataColumnData.sql" />
+    <Content Include="bin\Debug\SQLScript\2Add\sp_DataKeyAdd.sql" />
+    <Content Include="bin\Debug\SQLScript\3Data\sp_DataKeyData.sql" />
+    <Content Include="bin\Debug\SQLScript\3Data\sp_DataModuleData.sql" />
+    <Content Include="bin\Debug\SQLScript\3Data\sp_DataTableData.sql" />
     <Content Include="bin\Debug\SQLScript\ForeignKeys\Compare.txt" />
     <Content Include="bin\Debug\SQLScript\ForeignKeys\DataUtilityDropFK.sql" />
     <Content Include="bin\Debug\SQLScript\ForeignKeys\sp_DataColumnFK.sql" />
@@ -189,14 +189,12 @@
     <Content Include="bin\Debug\SQLScript\ForeignKeys\sp_DataKeyFK.sql" />
     <Content Include="bin\Debug\SQLScript\ForeignKeys\sp_DataTableDropFK.sql" />
     <Content Include="bin\Debug\SQLScript\ForeignKeys\sp_DataTableFK.sql" />
-    <Content Include="bin\Debug\SQLScript\Tables\DataUtilityTables.sql" />
-    <Content Include="bin\Debug\SQLScript\Tables\sp_DatacColumn.sql" />
+    <Content Include="bin\Debug\SQLScript\1Tables\DataUtilityTables.sql" />
+    <Content Include="bin\Debug\SQLScript\1Tables\sp_DataColumn.sql" />
     <Content Include="bin\Debug\SQLScript\SelectTnto.sql" />
-    <Content Include="bin\Debug\SQLScript\Tables\sp_DataKey.sql" />
-    <Content Include="bin\Debug\SQLScript\Tables\sp_DataMapColumn.sql" />
-    <Content Include="bin\Debug\SQLScript\Tables\sp_DataModule.sql" />
-    <Content Include="bin\Debug\SQLScript\Tables\sp_DataTable.sql" />
-    <Content Include="bin\Debug\SQLScript\Tables\sp_DataMapTable.sql" />
+    <Content Include="bin\Debug\SQLScript\1Tables\sp_DataKey.sql" />
+    <Content Include="bin\Debug\SQLScript\1Tables\sp_DataModule.sql" />
+    <Content Include="bin\Debug\SQLScript\1Tables\sp_DataTable.sql" />
     <Content Include="Doc\XMLAttribute.xml" />
     <Content Include="Doc\XMLAttributes.xml" />
     <Content Include="Doc\XMLBuilder.xml" />
