--- a/CoreUtilities/LJCDataUtility/LJCDataUtilityDAL/LJCDataUtilityDAL.csproj
+++ b/CoreUtilities/LJCDataUtility/LJCDataUtilityDAL/LJCDataUtilityDAL.csproj
@@ -57,8 +57,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\ForeignKey.cs" />
-    <Compile Include="Data\ForeignKeys.cs" />
+    <Compile Include="Data\TableKey.cs" />
+    <Compile Include="Data\TableKeys.cs" />
     <Compile Include="ManagersDataUtility.cs" />
     <Compile Include="Data\DataUtilColumn.cs" />
     <Compile Include="Data\DataColumns.cs" />
@@ -72,7 +72,7 @@
     <Compile Include="Data\DataTables.cs" />
     <Compile Include="Manager\DataModuleManager.cs" />
     <Compile Include="Manager\DataTableManager,.cs" />
-    <Compile Include="Manager\ForeignKeyManager.cs" />
+    <Compile Include="Manager\TableKeyManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValuesDataUtility.CS" />
   </ItemGroup>
