--- a/CoreUtilities/LJCGenDoc/LJCGenDocDAL/LJCGenDocDAL.csproj
+++ b/CoreUtilities/LJCGenDoc/LJCGenDocDAL/LJCGenDocDAL.csproj
@@ -40,7 +40,7 @@
       <HintPath>..\External\LJCDBClientLib.dll</HintPath>
     </Reference>
     <Reference Include="LJCDBDataAccess">
-      <HintPath>..\..\..\CoreAssemblies\LJCDBViewDAL\External\LJCDBDataAccess.dll</HintPath>
+      <HintPath>..\..\LJCDataUtility\External\LJCDBDataAccess.dll</HintPath>
     </Reference>
     <Reference Include="LJCDBMessage, Version=2.2.521.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
