Data Utility Updates

--- a/CoreUtilities/LJCDataUtility/LJCDataUtility/App.config
+++ b/CoreUtilities/LJCDataUtility/LJCDataUtility/App.config
@@ -8,5 +8,6 @@
     <add key="ConnectionType" value="SQLServer" />
     <add key="DataConfigName" value="DataUtility" />
     <add key="EndColor" value="SkyBlue" />
+    <add key="SiteID" value="1" />
   </appSettings>
 </configuration>
