--- a/CoreUtilities/LJCDataUtility/LJCDataUtilityDAL/LJCDataUtilityDAL.csproj
+++ b/CoreUtilities/LJCDataUtility/LJCDataUtilityDAL/LJCDataUtilityDAL.csproj
@@ -35,6 +35,9 @@
       <HintPath>External\LJCDataAccess.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="LJCDataAccessConfig">
+      <HintPath>..\External\LJCDataAccessConfig.dll</HintPath>
+    </Reference>
     <Reference Include="LJCDBClientLib">
       <HintPath>..\External\LJCDBClientLib.dll</HintPath>
     </Reference>
