Data Utility Updates

--- a/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
+++ b/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Forms\DataTable\CustomActions\RenameTable.cs" />
     <Compile Include="Forms\DataTable\CustomActions\SetUtilData.cs" />
     <Compile Include="Forms\DataTable\CustomActions\TableKeyGroup.cs" />
+    <Compile Include="Forms\DataTable\CustomActions\TextLine.cs" />
     <Compile Include="Forms\MyProcBuilder.cs" />
     <Compile Include="Forms\TableNameSelect.cs">
       <SubType>Form</SubType>
