--- a/CoreAssemblies/LJCNetCommon/LJCNetCommon/LJCNetCommon.csproj
+++ b/CoreAssemblies/LJCNetCommon/LJCNetCommon/LJCNetCommon.csproj
@@ -107,6 +107,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Doc\PropertyDelegates.xml" />
+    <Content Include="Doc\TextBuilder.xml" />
     <Content Include="Doc\XMLAttribute.xml" />
     <Content Include="Doc\XMLAttributes.xml" />
     <Content Include="Doc\XMLBuilder.xml" />
