--- a/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
+++ b/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
@@ -129,6 +129,10 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\ProcBuilder.cs" />
+    <Compile Include="HTMLAttrib.cs" />
+    <Compile Include="HTMLAttribs.cs" />
+    <Compile Include="HTMLBuilder.cs" />
+    <Compile Include="LJC.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\TableNameSelect.resx">
@@ -206,6 +210,10 @@
     <Content Include="bin\Debug\SQLScript\1Tables\sp_DataKey.sql" />
     <Content Include="bin\Debug\SQLScript\1Tables\sp_DataModule.sql" />
     <Content Include="bin\Debug\SQLScript\1Tables\sp_DataTable.sql" />
+    <Content Include="Doc\HTML.html" />
+    <Content Include="Doc\HTMLAttrib.xml" />
+    <Content Include="Doc\HTMLAttribs.xml" />
+    <Content Include="Doc\HTMLBuilder.xml" />
     <Content Include="Doc\MyProcBuilder.xml" />
     <Content Include="Doc\ProcBuilder.xml" />
     <Content Include="Forms\DataTable\ACreate.txt" />
